7900203: JTreg needs to log instructions for rerunning test outside jtreg